--- a/Friendly-plans/app/build.gradle
+++ b/Friendly-plans/app/build.gradle
@@ -107,3 +107,14 @@ android.applicationVariants.all { variant ->
         assembleDebug.finalizedBy('assembleDebugUnitTest')
     }
 }
+
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '25.3.0'
+            }
+        }
+    }
+}
